--- a/account/templates/accounts/homepage.html
+++ b/account/templates/accounts/homepage.html
@@ -6,13 +6,80 @@
 {% block content %}
 {% load static %}
 <!-- Login popup -->
+
+	<style >
+		@keyframes slider{
+     0%{background-image: url("{% static 'picture/s1.jpg' %}");}
+     10%{background-image: url("{% static 'picture/s2.jpg' %}");}
+     20%{background-image: url("{% static 'picture/s3.jpg' %}");}
+     30%{background-image: url("{% static 'picture/s4.jpg' %}");}
+     40%{background-image: url("{% static 'picture/s5.jpg' %}");}
+     50%{background-image: url("{% static 'picture/s06.jpg' %}");}
+     60%{background-image: url("{% static 'picture/s7.jpg' %}");}
+     70%{background-image: url("{% static 'picture/s8.jpg' %}");}
+     80%{background-image: url("{% static 'picture/s09.jpg' %}");}
+     90%{background-image: url("{% static 'picture/s10.jpg' %}");}
+     100%{background-image: url("{% static 'picture/s11.jpg' %}");}
+
+ }
+
+
+
+	</style>
+	<div id="header">
+		
+		
+
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style=" position: fixed; width: 100%; top: 0;">
+			<div class="container">
+				
+					<a class="navbar-brand" href="#header" class="">Travel World</a>
+				
+			<button class="navbar-toggler"data-toggle="collapse" data-target="#navbarMenu">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class=" collapse navbar-collapse" id="navbarMenu">
+				
+				<ul class="navbar-nav ">
+
+				<a class="nav-link" href="#header"><li class="nav-item"><i class="fas fa-home"></i>  Home</li></a>
+
+				
+				<a class="nav-link" href="{% url 'booking' %}"><li class="nav-item"><i class="fas fa-bookmark"></i>  Booking</li></a>
+				
+				
+				<a class="nav-link" href="{% url 'aboutus' %}"><li class="nav-item"><i class="fas fa-info-circle"></i>  About</li></a>
+				
+				<a class="nav-link" data-target="#model" data-toggle="modal" >
+					<li class="nav-item"><i class="fas fa-address-card"></i>  Login</li></a>
+
+				
+
+				
+
+
+			
+				</ul>
+			</div>
+			
+			
+		</div>
+			
+		</div>
+
+		
+	</div>
+
+
+	<!-- Login popup -->
 	<div class="modal" id="model">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
 					<p class="text"> Login</p>
 					<button type="button" class="close" data-dismiss="modal"> &times;</button>
-
+					
 				</div>
 				<div class="modal-body">
 					<form>
@@ -34,236 +101,93 @@
 
 		        	</div>
 		        	<div class="form-group">
-		        		<p><a  href=""> Forget you Password/Email?</a></p>
-		                <p><a  href={% url "accounts/signup.html"> Create a New Account..</a></p>
+		        		<p><a  href="{% url 'forgotpass' %}"> Forget you Password/Email?</a></p>
+		                <p><a  href="{% url 'signup' %}"> Create a New Account..</a></p>
 		        	</div>
 		        	</form>
 				</div>
 
-
+				
 			</div>
-
+			
 		</div>
-
+		
 
 
 	</div>
-   	<!--Home Page ko design-->
+
+	
+
+	<!--Home Page ko design-->
 	<div class="thumbnail">
 
-  		<img class="homepageimg" src="{% static 'picture/homepage.jpg'%} " alt="Snow" style="width:100%; height: 100vh;">
+  		<img class="homepageimg" src="{% static 'picture/homepage.jpg' %}" alt="Snow" style="width:100%; height: 100vh;">
 	    <div class="centered">
 
 	    	<!--img src="travellogo.png" alt="logo" -->
 	    	<h1 id="heading">TRAVEL WORLD</h1>
-	    	<button type="button" class="btn1 " onclick="window.location.href='#booking';">Book Now </button>
-	    	<button type="button" class="btn1 " onclick="window.location.href='signup/signup.html';" >Join Now</button>
+	    	<button type="button" class="btn1 " href="#" style="font-weight: bold;">WHY US? </button>
+	    	<button type="button" class="btn1 " href='#' style="font-weight: bold;" >JOIN FOR FREE</button>
 	    </div>
 	</div>
-	<div class="infocontainer" style="margin:50px 0">
-		<div class="row">
-  			<div class="column">
-    			<img class="img-thumbnail" src="{% static 'picture/offer.jpg'%} " style="width:100%">
-    				<h2>Super Offers </h2>
-    				<p>Up to 50% off . Always 25% off for student.</p>
-  			</div>
+	
+	<div class="gallery-heading" id="gallery">
+        <h2>SOME WONDERFUL PLACES</h2>
+    </div>
+    
+    <div class="maindiv"></div>
 
-  			<div class="column">
-    			<img class="img-thumbnail" src="{% static 'picture/hotel.jpg'%} " style="width:100%">
-    				<h2>Hotel Booking Comming Soon !!</h2>
-    				<p>Up to 20% cash back in first week</p>
-  			</div>
-		</div>
+  			
+			
 
 
+	
+		<!-- Footer -->
+<footer class="page-footer font-small special-color-dark pt-4" style="background-color:#bdc3c7;">
 
-	</div>
+  <!-- Footer Elements -->
+  <div class="container">
 
+    <!-- Social buttons -->
+    <ul class="list-unstyled list-inline text-center">
+      <li class="list-inline-item">
+        <a class="btn-floating btn-fb mx-1">
+          <i class="fab fa-facebook-f"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-tw mx-1">
+          <i class="fab fa-twitter"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-gplus mx-1">
+          <i class="fab fa-google-plus-g"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-li mx-1">
+          <i class="fab fa-linkedin-in"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-dribbble mx-1">
+          <i class="fab fa-dribbble"> </i>
+        </a>
+      </li>
+    </ul>
+    <!-- Social buttons -->
 
-	<!-- BOOKING START FROM HERE   -->
-	<div id="booking">
-		<h1 id="book"> Booking</h1>
-		<div class="fun">
-			<p>Quick Search</p>
-			<div class="s1">
-				 <p>From</p>
-					 <form action="/action_page.php">
-					  <select name="cars" id="from1">
-					    <option value="volvo">Kathmandu</option>
-					    <option value="saab">Beunos Aries</option>
-					    <option value="opel">New York</option>
-					    <option value="audi">Nagasaki</option>
-					    <option value="audi">Perth</option>
-					    <option value="audi">Cape Town</option>
-					    <option value="audi">Ibiza</option>
-					  </select>
-					</form>
-			</div>
-			<div class="s2">
-				 <p>To</p>
-				 <form action="/action_page.php">
-					 <select name="cars" id="from2">
-					    <option value="volvo">Kathmandu</option>
-					    <option value="saab">Beunos Aries</option>
-					    <option value="opel">New York</option>
-					    <option value="audi">Nagasaki</option>
-					    <option value="audi">Perth</option>
-					    <option value="audi">Cape Town</option>
-					    <option value="audi">Ibiza</option>
-					 </select>
-				</form>
-			</div>
-			<div class="s3">
-			 	<button class="btn btn-dark">Find</button>
-			</div>
+  </div>
+  <!-- Footer Elements -->
 
-		</div>
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> softwarica.com</a>
+  </div>
+  <!-- Copyright -->
 
-
-
-
-
-
-
-
-
-	</div>
-
-<div class="content">
-
-
-	 		<div class="tbl">
-				<div id="offer">
-					<h2 class="blinking">>>>>OFFER ON-GOING<<<<</h2>
-				</div>
-				<table  >
-
-
-					<tr>
-						<th > SN </th>
-						<th > Destination </th>
-						<th > Duration </th>
-						<th > Actuall Price Per person </th>
-						<th > Offer Price Per Person </th>
-						<th > Book Now </th>
-
-					</tr>
-					<tbody>
-						<tr>
-							<th >1</th>
-							<td>Kathmandu</td>
-							<td>5d/4n</td>
-							<td>$500</td>
-							<td>$250</td>
-							<td><button class="btntable">Book Now</button></td>
-						</tr>
-						<tr>
-							<th >2</th>
-							<td>Beunos Aries</td>
-							<td>7d/6n</td>
-							<td>$950</td>
-							<td>$475</td>
-							<td><button class="btntable">Book Now</button></td>
-						</tr>
-						<tr>
-							<th >3</th>
-							<td>New York</td>
-							<td>6d/6n</td>
-							<td>$1000</td>
-							<td>$500</td><td>
-								<button class="btntable">Book Now</button></td>
-						</tr>
-						<tr>
-							<th >4</th>
-							<td>Nagasaki</td>
-							<td>8d/7n</td>
-							<td>$700</td>
-							<td>$350</td><td>
-								<button class="btntable">Book Now</button></td>
-						</tr>
-						<tr>
-							<th >5</th>
-							<td>Perth</td>
-							<td>10d/10n</td>
-							<td>$850</td>
-							<td>$425</td><td>
-								<button class="btntable">Book Now</button></td>
-						</tr>
-						<tr>
-							<th >6</th>
-							<td>Cape Town</td>
-							<td>8d/8n</td>
-							<td>$500</td>
-							<td>$250</td><td>
-								<button class="btntable">Book Now</button></td>
-						</tr>
-						<tr>
-							<th>7</th>
-							<td>Ibiza </td>
-							<td>10d/9n</td>
-							<td>$1200</td>
-							<td>$600</td>
-							<td><button class="btntable">Book Now</button></td>
-						</tr>
-
-					</tbody>
-
-
-				</table>
-			</div>
-
-
-
-
-		</div>
-
-		<div id="about">
-			<h1 id="abt">ABOUT US </h1>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. .</p>
-
-		</div>
-		<div class="inf">
-			<div class="abtcontainer" style="margin:0px 0">
-				<div class="row1">
-  					<div class="column2">
-    					<img class="img-thumbnail" src="{% static 'picture/abt1.jpg'%} " style="width:100%">
-	    				<h2> Fast and Reliable </h2>
-	    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	    				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	    				quis nostrud exercitation ullamco laboris nisi ut </p>
-  					</div>
-
-		  			<div class="column2">
-		    			<img class="img-thumbnail" src="{% static 'picture/abt2.jpg'%} " style="width:100%">
-		    				<h2>Budget Travel</h2>
-		    				<p>
-		    				 Duis aute irure dolor in reprehenderit in voluptate velit esse
-		    				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		    				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		  			</div>
-		  			<div class="column2">
-		    			<img class="img-thumbnail" src="{% static 'picture/abt3.jpg'%} " style="width:100%">
-		    				<h2>People Choice Award Winner (18/19)</h2>
-		    				<p>
-		    				Tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		    				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		    				consequat proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		  			</div>
-				</div>
-
-
-
-			</div>
-		</div>
-
-		<div class="footer">
-			<p>©  2020 Bishal. All Rights Reserved.</p>
-
-		</div>
+</footer>
 
 {% endblock  %}
 
