--- a/account/templates/accounts/signup.html
+++ b/account/templates/accounts/signup.html
@@ -1,50 +1,13 @@
+{% extends 'accounts/mainfile.html' %}
+
+
+
+{% block content %}
+
 {% load static %}
 <link rel="stylesheet" href="{% static '/css/signup.css'%}">
 
-<div class="header">
 
-
-
-		<div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style=" position: fixed; width: 100%; top: 0;">
-			<div class="container">
-
-					<a class="navbar-brand" href="../project.html" class="">Travel World</a>
-
-			<button class="navbar-toggler"data-toggle="collapse" data-target="#navbarMenu">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class=" collapse navbar-collapse" id="navbarMenu">
-
-				<ul class="navbar-nav ">
-
-				<a class="nav-link" href="../project.html"><li class="nav-item"><i class="fas fa-home"></i>  Home</li></a>
-
-
-				<a class="nav-link" href="project.html"><li class="nav-item"><i class="fas fa-bookmark"></i>  Booking</li></a>
-
-
-				<a class="nav-link" href="project.html"><li class="nav-item"><i class="fas fa-info-circle"></i>  About</li></a>
-
-				<a class="nav-link" data-target="#model" data-toggle="modal" >
-					<li class="nav-item"><i class="fas fa-address-card"></i>  Login</li></a>
-
-
-
-
-
-
-
-				</ul>
-			</div>
-
-
-		</div>
-
-		</div>
-
-
-	</div>
 
 	</div>
 	<div class="Container">
@@ -147,3 +110,50 @@
 	</div>
 
     </div>
+    <footer class="page-footer font-small special-color-dark pt-4" style="background-color: #bdc3c7;">
+
+  <!-- Footer Elements -->
+  <div class="container">
+
+    <!-- Social buttons -->
+    <ul class="list-unstyled list-inline text-center">
+      <li class="list-inline-item">
+        <a class="btn-floating btn-fb mx-1">
+          <i class="fab fa-facebook-f"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-tw mx-1">
+          <i class="fab fa-twitter"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-gplus mx-1">
+          <i class="fab fa-google-plus-g"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-li mx-1">
+          <i class="fab fa-linkedin-in"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-dribbble mx-1">
+          <i class="fab fa-dribbble"> </i>
+        </a>
+      </li>
+    </ul>
+    <!-- Social buttons -->
+
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> softwarica.com</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+
+    {% endblock  %}
