--- a/account/templates/accounts/aboutus.html
+++ b/account/templates/accounts/aboutus.html
@@ -29,7 +29,7 @@
         <p class="title">CEO & Founder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>jerry@email.com</p>
-        <p><button class="button" href="https://softwarica.edu.np/" style="width: 48%">Contact</button></p>
+        <p><button class="button" href="https://softwarica.edu.np/" style="width: 37%"><a href="https://softwarica.edu.np/">Contact</a></button></p>
       </div>
     </div>
   </div>
@@ -42,7 +42,7 @@
         <p class="title">Acountant</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>popeye@email.com</p>
-        <p><button class="button" href="https://softwarica.edu.np/" style="width: 48%">Contact</button></p>
+        <p><button class="button" href="https://softwarica.edu.np/" style="width: 37%"><a href="https://softwarica.edu.np/">Contact</a></button></p>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
         <p class="title">Designer</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>perryy@example.com</p>
-        <p><button class="button" href="https://softwarica.edu.np/" style="width: 48%">Contact</button></p>
+        <p><button class="button" href="https://softwarica.edu.np/" style="width: 37%"><a href="https://softwarica.edu.np/">Contact</a></button></p>
       </div>
     </div>
   </div>
@@ -68,7 +68,7 @@
         <p class="title">Moderator</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>perryy@example.com</p>
-        <p><button class="button" href="https://softwarica.edu.np/" style="width: 48%">Contact</button></p>
+        <p><button class="button"  style="width: 37%"><a href="https://softwarica.edu.np/">Contact</a></button></p>
       </div>
     </div>
   </div>
