--- a/account/templates/accounts/booking.html
+++ b/account/templates/accounts/booking.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+
 {% load static %}
 
     <div id="booking" class="section">
@@ -20,41 +21,47 @@
 						</div>
 					</div>
 					<div class="col-md-4 col-md-pull-7">
-						<div class="booking-form">
-							<form>
+						<div class="booking-form" style="margin-top: 20px;">
+
+
+							<form action="" method="post">
+								{% csrf_token%}
+								
 								<div class="form-group">
-									<span class="form-label">Your Destination</span>
-									<input class="form-control" type="text" placeholder="Enter a destination " required>
+									<span class="form-label">Mention Your Destination</span>
+									<input class="form-control" type="text" placeholder="Destination.." name="place" required>
 								</div>
 
 								<div class="form-group">
 									<span class="form-label">Your Email</span>
-									<input class="form-control" type="text" placeholder="Enter Your Email" required>
+									<input class="form-control" type="text" placeholder="Enter Your Email" name="email" required>
 								</div>
 
 								<div class="form-group">
 									<span class="form-label">Number of People</span>
-									<input class="form-control" type="text" placeholder="No. of People" required>
+									<input class="form-control" type="text" placeholder="No. of People"name="numberofpeople" required>
 								</div>
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="form-group">
 											<span class="form-label">Check In</span>
-											<input class="form-control" type="date" required>
+											<input class="form-control" type="text"name="checkin" required>
 										</div>
 									</div>
 									<div class="col-sm-6">
 										<div class="form-group">
 											<span class="form-label">Check out</span>
-											<input class="form-control" type="date" required>
+											<input class="form-control" type="text"name="checkout" required>
 										</div>
 									</div>
 								</div>
 								
 								
 								<div class="form-btn">
-									<button class="submit-btn">Book Now</button>
+									<button class="submit-btn" type="submit">Book Now</button>
+
 								</div>
+								<p style="font-size: 10px; color: red; margin-top: 15px;">You Must Register First to Book</p>
 							</form>
 						</div>
 					</div>
