--- a/account/templates/accounts/forgotpass.html
+++ b/account/templates/accounts/forgotpass.html
@@ -28,7 +28,7 @@
                                     </div>
                                   </div>
                                   <div class="form-group">
-                                    <input class="btn btn-lg btn-primary btn-block" value="Send My Password" type="submit">
+                                    <input class="btn btn-lg btn-primary btn-block" value="Send My Password" type="submit" onclick="return forgotpass() ">
                                   </div>
                                 </fieldset>
                               </form>
@@ -41,5 +41,11 @@
         </div>
     </div>
 </div>
+
+<script>
+function forgotpass() {
+  alert("Password Sucessfully Send To your Email. ");
+}
+</script>
 
 {% endblock  %}
