--- a/account/templates/accounts/homepage.html
+++ b/account/templates/accounts/homepage.html
@@ -1,5 +1,6 @@
+{% extends "accounts/mainfile.html" %}
 
-{% extends 'accounts/mainfile.html' %}
+
 
 
 
@@ -26,95 +27,10 @@
 
 
 	</style>
-	<div id="header">
-		
-		
-
-		<div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style=" position: fixed; width: 100%; top: 0;">
-			<div class="container">
-				
-					<a class="navbar-brand" href="#header" class="">Travel World</a>
-				
-			<button class="navbar-toggler"data-toggle="collapse" data-target="#navbarMenu">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class=" collapse navbar-collapse" id="navbarMenu">
-				
-				<ul class="navbar-nav ">
-
-				<a class="nav-link" href="#header"><li class="nav-item"><i class="fas fa-home"></i>  Home</li></a>
-
-				
-				<a class="nav-link" href="{% url 'booking' %}"><li class="nav-item"><i class="fas fa-bookmark"></i>  Booking</li></a>
-				
-				
-				<a class="nav-link" href="{% url 'aboutus' %}"><li class="nav-item"><i class="fas fa-info-circle"></i>  About</li></a>
-				
-				<a class="nav-link" data-target="#model" data-toggle="modal" >
-					<li class="nav-item"><i class="fas fa-address-card"></i>  Login</li></a>
-
-				
-
-				
+	
 
 
-			
-				</ul>
-			</div>
-			
-			
-		</div>
-			
-		</div>
-
-		
-	</div>
-
-
-	<!-- Login popup -->
-	<div class="modal" id="model">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<p class="text"> Login</p>
-					<button type="button" class="close" data-dismiss="modal"> &times;</button>
-					
-				</div>
-				<div class="modal-body">
-					<form>
-        			<div class="form-group">
-        				<label><i class="fas fa-user"></i> Username</label>
-        				<input type="text" class="form-control">
-        				<span class ='error'></span>
-
-        			</div>
-		        	<div class="form-group">
-		        		<label><i class="fas fa-key"></i> Password</label>
-		        		<input type="Password" class="form-control">
-		        		<span class ='error'></span>
-
-		        	</div >
-            		<label><input type="checkbox"> Remember me</label>
-		        	<div class="form-group">
-		        		<button class="btn btn-success" onclick=" return validation()" > Login </button>
-
-		        	</div>
-		        	<div class="form-group">
-		        		<p><a  href="{% url 'forgotpass' %}"> Forget you Password/Email?</a></p>
-		                <p><a  href="{% url 'signup' %}"> Create a New Account..</a></p>
-		        	</div>
-		        	</form>
-				</div>
-
-				
-			</div>
-			
-		</div>
-		
-
-
-	</div>
+	
 
 	
 
@@ -126,8 +42,8 @@
 
 	    	<!--img src="travellogo.png" alt="logo" -->
 	    	<h1 id="heading">TRAVEL WORLD</h1>
-	    	<button type="button" class="btn1 " href="#" style="font-weight: bold;">WHY US? </button>
-	    	<button type="button" class="btn1 " href='#' style="font-weight: bold;" >JOIN FOR FREE</button>
+	    	<button type="button" class="btn1 "  style="font-weight: bold;"><a href="/aboutus" style="color: white; text-decoration: none; ">WHY US? </a></button>
+	    	<button type="button" class="btn1 " href='#' style="font-weight: bold;" ><a href="/booking/create" style="color: white; text-decoration: none; ">JOIN NOW  </a></button>
 	    </div>
 	</div>
 	
