--- a/account/templates/accounts/navbar.html
+++ b/account/templates/accounts/navbar.html
@@ -8,7 +8,7 @@
 		<div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style=" position: fixed; width: 100%; top: 0;">
 			<div class="container">
 
-					<a class="navbar-brand" href="{% url 'homepage' %}" class="">Travel World</a>
+					<a class="navbar-brand" href="/" class="">Travel World</a>
 
 			<button class="navbar-toggler"data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
@@ -18,16 +18,17 @@
 
 				<ul class="navbar-nav ">
 
-				<a class="nav-link" href="{% url 'homepage' %}"><li class="nav-item"><i class="fas fa-home"></i>  Home</li></a>
+				<a class="nav-link" href="/"><li class="nav-item"><i class="fas fa-home"></i>  Home</li></a>
 
 
-				<a class="nav-link" href="{% url 'booking' %}"><li class="nav-item"><i class="fas fa-bookmark"></i>  Booking</li></a>
+				<a class="nav-link" href="/booking/create"><li class="nav-item"><i class="fas fa-bookmark"></i>  Booking</li></a>
 				
 				
-				<a class="nav-link" href="{% url 'aboutus' %}"><li class="nav-item"><i class="fas fa-info-circle"></i>  About</li></a>
+				<a class="nav-link" href="/aboutus">
+					<li class="nav-item"><i class="fas fa-info-circle"></i>  About</li></a>
 
-				<a class="nav-link" data-target="#model" data-toggle="modal" >
-					<li class="nav-item"><i class="fas fa-address-card"></i>  Login</li></a>
+				<a class="nav-link" href="/user"  >
+					<li class="nav-item"><i class="fas fa-address-card" style="cursor: pointer;"></i>  Register</li></a>
 
 
 
@@ -46,49 +47,7 @@
 	</div>
 
 
-	<!-- Login popup -->
-	<div class="modal" id="model">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<p class="text"> Login</p>
-					<button type="button" class="close" data-dismiss="modal"> &times;</button>
-					
-				</div>
-				<div class="modal-body">
-					<form>
-        			<div class="form-group">
-        				<label><i class="fas fa-user"></i> Username</label>
-        				<input type="text" class="form-control">
-        				<span class ='error'></span>
-
-        			</div>
-		        	<div class="form-group">
-		        		<label><i class="fas fa-key"></i> Password</label>
-		        		<input type="Password" class="form-control">
-		        		<span class ='error'></span>
-
-		        	</div >
-            		<label><input type="checkbox"> Remember me</label>
-		        	<div class="form-group">
-		        		<button class="btn btn-success" onclick=" return validation()" > Login </button>
-
-		        	</div>
-		        	<div class="form-group">
-		        		<p><a  href="{% url 'forgotpass' %}"> Forget you Password/Email?</a></p>
-		                <p><a  href="{% url 'signup' %}"> Create a New Account..</a></p>
-		        	</div>
-		        	</form>
-				</div>
-
-				
-			</div>
-			
-		</div>
-		
-
-
-	</div>
+	
 
 	
 
