Final Web Project with Django

--- a/account/templates/accounts/homepage.html
+++ b/account/templates/accounts/homepage.html
@@ -43,7 +43,7 @@
 	    	<!--img src="travellogo.png" alt="logo" -->
 	    	<h1 id="heading">TRAVEL WORLD</h1>
 	    	<button type="button" class="btn1 "  style="font-weight: bold;"><a href="/aboutus" style="color: white; text-decoration: none; ">WHY US? </a></button>
-	    	<button type="button" class="btn1 " href='#' style="font-weight: bold;" ><a href="/booking/create" style="color: white; text-decoration: none; ">JOIN NOW  </a></button>
+	    	<button type="button" class="btn1 " href='#' style="font-weight: bold;" ><a href="/booking/create" style="color: white; text-decoration: none; ">BOOK NOW  </a></button>
 	    </div>
 	</div>
 	
