--- a/account/templates/accounts/adminlogin.html
+++ b/account/templates/accounts/adminlogin.html
@@ -89,11 +89,11 @@ background: linear-gradient(#ffdd7f 5%, #ffbc00 100%);
     <div class="main">
     <h2>Admin login</h2>
     <form id="form_id" method="post" name="myform">
-    <label>User Name :</label>
-    <input type="text" name="username" id="username"/>
-    <label>Password :</label>
-    <input type="password" name="password" id="password"/>
-    <input type="button" value="Login" id="submit" onclick="validate()"/>
+        <label>User Name :</label>
+        <input type="text" name="username" id="username">
+        <label>Password :</label>
+        <input type="password" name="password" id="password">
+        <input type="button" value="Login" id="submit" onclick="validate()"/>
     </form>
     
     </div>
@@ -108,7 +108,7 @@ background: linear-gradient(#ffdd7f 5%, #ffbc00 100%);
     var password = document.getElementById("password").value;
     if ( username == "admin" && password == "admin"){
     alert ("Login successfully");
-    window.location = "{% url 'admindashboard %}"; // Redirecting to other page.
+    window.location = "#"; // Redirecting to other page.
     return false;
     }
     else{
