--- a/account/templates/accounts/booking.html
+++ b/account/templates/accounts/booking.html
@@ -34,7 +34,7 @@
 
 								<div class="form-group">
 									<span class="form-label">Your Email</span>
-									<input class="form-control" type="text" placeholder="Enter Your Email" name="email" required>
+									<input class="form-control" type="Email" placeholder="Enter Your Email" name="email" required>
 								</div>
 
 								<div class="form-group">
