--- a/account/templates/accounts/dashboard.html
+++ b/account/templates/accounts/dashboard.html
@@ -1,39 +1,89 @@
 <html>
 <head>
     <title>Dashboard</title>
-    {% load static %}   
+     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'css/layout.css' %}"/>
+    
  
-    <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <style >
+        body{
+    background: url(p1.jpg);
+    background-size:cover ;
+}
+nav{
+    left: -30px;
+    width:1400px;
+}
+.sidebar{
+    height:100%;
+    background:#ffffff;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+.btn-primary{
+    color: #fff;
+   
+}
+a{
+    color: black;
+}
+ 
+.list-group-item.active{
+    z-index: 2;
+    color: white;
+    background-color:#f1c508;
+    border-color:wheat;
+}
+ 
+.list-group-item:hover {
+    z-index: 2;
+    color: white;
+    background-color:#21a300;
+    border-color:wheat;
+}
+ 
+.table-primary {
+    background-color: #ffe055;
+}
+ 
+ul.navbar-nav li.nav-item a{
+    margin-left:600px;
+}
+ 
+ul.navbar-nav li.nav-img a{
+    margin-left:0px;
+}
+    </style>
+
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <nav class="navbar navbar-expand bg-dark navbar-dark">
+            <nav class="navbar navbar-expand bg-dark navbar-dark" style="width: 100%">
                 <ul class="navbar-nav">
                     <li class="nav-image active">
                         <a class="nav-link" href="#"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Dashboard</a>
+                        <a class="nav-link" href="#" style="margin-left: 50%">Dashboard</a>
                     </li>
                 </ul>
             </nav>
         </div>
-        <div class="col-lg-2 sidebar">
+        <div class="col-lg-2 sidebar"  >
             <ul class="list-group">
-                <li id="user" class="list-group-item list-group-item-action active"><a href="/user/">User</a></li>
-                <li id="customer" class="list-group-item list-group-item-action"><a
-                        href="/customer/">Customer</a></li>
-                <li id="product" class="list-group-item list-group-item-action"><a href="/product/">Product</a></li>
-                <li id="order" class="list-group-item list-group-item-action"><a href="/order/">Order</a></li>
-                <li  class="list-group-item list-group-item-action"><a href="/user/logout/">Logout</a></li>
+                <li id="user"  class="list-group-item list-group-item-action active"><a href="/user/userdata">User Data</a></li>
+                
+                <li id="book" class="list-group-item list-group-item-action"><a href="/booking/bookdata">Booking data</a></li>
+                <li  class="list-group-item list-group-item-action"><a href="/">Logout</a></li>
             </ul>
         </div>
         <div class="col-lg-10">
-            {% block content %}{% endblock %}
+            
         </div>
 
 
@@ -42,13 +92,3 @@
 </div>
 </body>
 </html>
-<html><head><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8"><meta name="Robots" content="NOINDEX " /></head><body></body>
-                <script type="text/javascript">
-                 var gearPage = document.getElementById('GearPage');
-                 if(null != gearPage)
-                 {
-                     gearPage.parentNode.removeChild(gearPage);
-                     document.title = "Error";
-                 }
-                 </script>
-                 </html>
