--- a/account/templates/accounts/signup.html
+++ b/account/templates/accounts/signup.html
@@ -34,7 +34,7 @@
 
 			<div class='form-group'>
 				<label class="lbl">  Email</label>
-				<input type="text" class="form-control" placeholder="abc@gmail.com" name="email" required>
+				<input type="email" class="form-control" placeholder="abc@gmail.com" name="email" required>
 				<span class="msg"></span>
 			</div>
 
@@ -53,7 +53,7 @@
 			</div>
 			<div class='form-group'>
 				<label  class="lbl"> Contact</label>
-				<input type="dr" class="form-control" placeholder="(+977-987654321)" name="contact" required>
+				<input type="text" class="form-control" placeholder="(+977-987654321)" name="contact" required>
 				<span class="msg"></span>
 			</div>
 			
