--- a/account/templates/booking/edit.html
+++ b/account/templates/booking/edit.html
@@ -1,29 +1,31 @@
-{% extends 'accounts/mainfile.html' %}
 {% block content %}
-<form method="POST" action="">
+{% load static %}
+    <link rel="stylesheet" type="text/css"  href="{% static '/css/bootstrap.min.css'%}">
+<h1 style="margin-left: 20%;">UPDATE </h1>
+<form  method="POST" action="" style="margin-top: 5%; margin-left: 30%; width: 50%; background-color: grey;opacity: 0.9; border-radius: 10px; ">
     {% csrf_token %}
 
-    <label>name</label>
-    {{form.fname}}
+    <label style="margin-left: 20%;">Destination</label>
+        <input type="text" class="form-control" placeholder="" name="place" required style=" width: 50%; margin-left: 20%;">
+
     <!--    <input type="text" id="name" name="name" />-->
-    <label>name</label>
-    {{form.lname}}
+    <label style="margin-left: 20%;">Email</label>
+        <input type="email" class="form-control" placeholder="" name="email" required style=" width: 50%; margin-left: 20%;">
 
-    <label>name</label>
-    {{form.email}}
 
-    <label>name</label>
-    {{form.city}}
+    <label style="margin-left: 20%;">No.of People</label>
+        <input type="text" class="form-control" placeholder="" name="numberofpeople" required style=" width: 50%; margin-left: 20%;">
 
-    <label>email</label>
-    {{form.country}}
-    <!--    <input type="text" id="email" name="email" />-->
 
-    <label>password</label>
-    {{form.contact}}
-    <!--    <input type="text" id="password" name="password" />-->
+    <label style="margin-left: 20%;">Checkin</label>
+    <input type="text" class="form-control" placeholder="" name="checkin" required style=" width: 50%; margin-left: 20%;">
 
-    <input type="submit" value="submit"/>
+    <label style="margin-left: 20%;">Checkout</label>
+    <input type="text" class="form-control" placeholder="" name="checkout" required style=" width: 50%; margin-left: 20%;">
+
+
+
+    <input style="margin-left: 20%;" class="btn btn-primary" type="submit" value="submit"/>
 </form>
 <!--to active selected tab in sidebar-->
 <script type="text/javascript">
