--- a/account/templates/user/edit.html
+++ b/account/templates/user/edit.html
@@ -1,29 +1,38 @@
-{% extends 'accounts/mainfile.html' %}
 {% block content %}
-<form method="POST" action="">
+{% load static %}
+    <link rel="stylesheet" type="text/css"  href="{% static '/css/bootstrap.min.css'%}">
+<h1 style="margin-left: 20%;">UPDATE </h1>
+<form  method="POST" action="" style="margin-top: 5%; margin-left: 30%; width: 50%; background-color: grey;opacity: 0.9; border-radius: 10px; ">
     {% csrf_token %}
 
-    <label>name</label>
-    {{form.fname}}
+    <label style="margin-left: 20%;">First name</label>
+    
+    <input type="text" class="form-control" placeholder="" name="fname" required style=" width: 50%; margin-left: 20%;">
+
     <!--    <input type="text" id="name" name="name" />-->
-    <label>name</label>
-    {{form.lname}}
+    <label style="margin-left: 20%;">Last name</label>
+    <input type="text" class="form-control" placeholder="" name="lname" required style=" width: 50%; margin-left: 20%;" >
 
-    <label>name</label>
-    {{form.email}}
 
-    <label>name</label>
-    {{form.city}}
+    <label style="margin-left: 20%;">Email</label>
+        <input type="email" class="form-control" placeholder="" name="email" required style=" width: 50%; margin-left: 20%;">
 
-    <label>email</label>
-    {{form.country}}
+
+    <label style="margin-left: 20%;">City</label>
+    <input type="text" class="form-control" placeholder="" name="city" required style=" width: 50%; margin-left: 20%;">
+
+
+    <label style="margin-left: 20%;">Country</label>
+    <input type="text" class="form-control" placeholder="" name="country" required style=" width: 50%; margin-left: 20%;">
+
     <!--    <input type="text" id="email" name="email" />-->
 
-    <label>password</label>
-    {{form.contact}}
+    <label style="margin-left: 20%;">Contact</label>
+    <input type="text" class="form-control" placeholder="" name="contact" required style=" width: 50%; margin-left: 20%;">
+
     <!--    <input type="text" id="password" name="password" />-->
 
-    <input type="submit" value="submit"/>
+    <input class="btn btn-primary" type="submit" value="submit"style="margin-left: 20%;">
 </form>
 <!--to active selected tab in sidebar-->
 <script type="text/javascript">
